--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
@@ -11,12 +11,12 @@
         android:id="@+id/tv_backup_hint_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginLeft="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_64"
+        android:layout_marginRight="@dimen/dp_25"
         android:text="@string/wallet_backup_hint"
         android:textColor="@color/wallet_black"
-        android:textSize="20sp"
+        android:textSize="@dimen/font_sp_20"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,10 +26,10 @@
         android:id="@+id/tv_backup_top"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="@dimen/dp_5"
         android:text="@string/wallet_backup_hint_top"
         android:textColor="@color/wallet_text_gray_color"
-        android:textSize="16sp"
+        android:textSize="@dimen/font_sp_15"
         app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_hint_title" />
@@ -38,12 +38,12 @@
         android:id="@+id/tv_backup_first"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/dp_30"
         android:drawableLeft="@drawable/wallet_blue_circle_point"
-        android:drawablePadding="5dp"
+        android:drawablePadding="@dimen/dp_5"
         android:text="@string/wallet_backup_mnemonic"
         android:textColor="@color/wallet_black"
-        android:textSize="13sp"
+        android:textSize="@dimen/font_sp_16"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
@@ -53,11 +53,12 @@
         android:id="@+id/tv_backup_first_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dp_5"
         android:text="@string/wallet_backup_hint_first_1"
         android:textColor="@color/wallet_text_gray_color"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        android:textSize="@dimen/font_sp_15"
+        android:layout_marginLeft="@dimen/dp_33"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first" />
 
@@ -65,12 +66,12 @@
         android:id="@+id/tv_backup_first_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:lineSpacingExtra="4.5dp"
+        android:layout_marginTop="@dimen/dp_10"
+        android:lineSpacingExtra="@dimen/dp_4_half"
         android:text="@string/wallet_backup_hint_first_2"
         android:textColor="@color/wallet_text_gray_color"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        android:textSize="@dimen/font_sp_15"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_first_1"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first_1" />
 
@@ -78,12 +79,12 @@
         android:id="@+id/tv_backup_two"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/dp_30"
         android:drawableLeft="@drawable/wallet_blue_circle_point"
-        android:drawablePadding="5dp"
+        android:drawablePadding="@dimen/dp_5"
         android:text="@string/wallet_offline_manager"
         android:textColor="@color/wallet_black"
-        android:textSize="13sp"
+        android:textSize="@dimen/font_sp_16"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
@@ -93,41 +94,40 @@
         android:id="@+id/tv_backup_two_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dp_5"
         android:text="@string/wallet_backup_hint_two_1"
-        android:lineSpacingExtra="4.5dp"
+        android:lineSpacingExtra="@dimen/dp_4_half"
         android:textColor="@color/wallet_text_gray_color"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        android:textSize="@dimen/font_sp_15"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_first_1"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two" />
 
     <TextView
         android:id="@+id/tv_backup_two_2"
         android:layout_width="0dp"
-        android:lineSpacingExtra="4.5dp"
+        android:lineSpacingExtra="@dimen/dp_4_half"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+
+        android:layout_marginTop="@dimen/dp_5"
         android:text="@string/wallet_backup_hint_two_2"
         android:textColor="@color/wallet_text_gray_color"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        android:textSize="@dimen/font_sp_15"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_first_1"
         app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two_1" />
 
     <TextView
         android:id="@+id/tv_next"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="14dp"
+        android:layout_width="@dimen/dp_315"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginBottom="@dimen/dp_14"
         android:background="@drawable/wallet_main_btn_background"
         android:gravity="center"
         android:text="@string/wallet_next"
         android:textColor="@color/wallet_white"
-        android:textSize="20sp"
+        android:textSize="@dimen/font_sp_20"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two_2" />
