--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
@@ -27,12 +27,12 @@
                 android:id="@+id/tv_backup_top"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="23dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginLeft="@dimen/dp_25"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_25"
                 android:text="@string/wallet_backup_mnemonic"
                 android:textColor="@color/wallet_black"
-                android:textSize="20sp"
+                android:textSize="@dimen/dp_20"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -42,11 +42,11 @@
                 android:id="@+id/tv_backup_hint"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:text="@string/wallet_backup_confirm_hint"
                 android:textColor="@color/wallet_text_gray_color"
-                android:textSize="13sp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:textSize="@dimen/font_sp_13"
+                app:layout_constraintLeft_toLeftOf="@id/tv_backup_top"
                 app:layout_constraintRight_toRightOf="@id/tv_backup_top"
                 app:layout_constraintTop_toBottomOf="@id/tv_backup_top" />
 
@@ -55,9 +55,9 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginLeft="@dimen/dp_18"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginRight="@dimen/dp_18"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_backup_hint" />
@@ -65,17 +65,15 @@
 
             <TextView
                 android:id="@+id/tv_next"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginBottom="30dp"
+                android:layout_width="@dimen/dp_315"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginTop="@dimen/dp_50"
+                android:layout_marginBottom="@dimen/dp_30"
                 android:background="@drawable/wallet_main_btn_background"
                 android:gravity="center"
                 android:text="@string/wallet_finish"
                 android:textColor="@color/wallet_white"
-                android:textSize="20sp"
+                android:textSize="@dimen/font_sp_20"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recycler_view" />
