--- a/app/src/main/res/layout/wallet_home_st_recommend_item.xml
+++ b/app/src/main/res/layout/wallet_home_st_recommend_item.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/dp_70"
+    android:layout_marginLeft="@dimen/dp_8"
+    android:layout_marginRight="@dimen/dp_8"
+    android:background="@mipmap/wallet_shadow_background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/st_recommend_item_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/wallet_shadow_background">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ning De Shi Dai"
-            android:textColor="@color/wallet_text_black"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|top"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_11"
+        android:text="Ning De Shi Dai"
+        android:textColor="@color/wallet_text_black"
+        android:textSize="@dimen/font_sp_14" />
 
-        <TextView
-            android:id="@+id/value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+10.00%"
-            android:textColor="@color/wallet_color_F2443D"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+    <TextView
+        android:id="@+id/value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_11"
+        android:textSize="@dimen/font_sp_14"
+        android:text="+10.00%"
+        android:textColor="@color/wallet_color_F2443D" />
 
-        <ImageView
-            android:id="@+id/hot_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/wallet_st_hot"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/hot_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="@dimen/dp_3"
+        android:layout_marginBottom="@dimen/dp_6"
+        android:src="@mipmap/wallet_st_hot" />
 
-</LinearLayout>
+</FrameLayout>
