--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -20,27 +20,27 @@
                 android:id="@+id/et_wallet_name"
                 style="@style/WalletCommonEditText"
                 android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/dp_15"
                 app:layout_constraintTop_toBottomOf="@id/tv_create_name" />
 
             <EditText
                 android:id="@+id/et_password"
                 style="@style/WalletCommonEditText"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/dp_10"
                 android:inputType="textPassword"
                 app:layout_constraintTop_toBottomOf="@id/ll_warning" />
 
             <EditText
                 android:id="@+id/et_password_again"
                 style="@style/WalletCommonEditText"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/dp_10"
                 android:inputType="textPassword"
                 app:layout_constraintTop_toBottomOf="@id/et_password" />
 
             <EditText
                 android:id="@+id/et_password_tip"
                 style="@style/WalletCommonEditText"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/dp_10"
                 app:layout_constraintTop_toBottomOf="@id/et_password_again" />
 
 
@@ -48,9 +48,9 @@
                 android:id="@+id/ll_warning"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="26dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="26dp"
+                android:layout_marginLeft="@dimen/dp_26"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_26"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/et_wallet_name">
 
@@ -58,25 +58,25 @@
                     android:id="@+id/tv_warning_top"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:drawableLeft="@drawable/wallet_blue_circle_point"
-                    android:drawablePadding="5dp"
+                    android:drawablePadding="@dimen/dp_5"
                     android:text="@string/wallet_password_warning_top"
                     android:textColor="@color/wallet_text_gray_color"
                     android:typeface="serif"
-                    android:textSize="11sp" />
+                    android:textSize="@dimen/font_sp_11" />
 
                 <TextView
                     android:id="@+id/tv_warning_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:typeface="serif"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:drawableLeft="@drawable/wallet_blue_circle_point"
-                    android:drawablePadding="5dp"
+                    android:drawablePadding="@dimen/dp_5"
                     android:text="@string/wallet_password_warning_bottom"
                     android:textColor="@color/wallet_text_gray_color"
-                    android:textSize="11sp" />
+                    android:textSize="@dimen/font_sp_11" />
             </LinearLayout>
 
 
@@ -84,28 +84,26 @@
                 android:id="@+id/tv_create_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="@dimen/dp_25"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/dp_20"
                 android:text="@string/wallet_create_wallet"
                 android:textColor="@color/wallet_text_black"
-                android:textSize="16sp"
+                android:textSize="@dimen/font_sp_15"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_create"
-                android:layout_width="match_parent"
-                android:layout_marginRight="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
+                android:layout_width="@dimen/dp_315"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginBottom="@dimen/dp_30"
                 android:background="@drawable/wallet_main_btn_background"
                 android:gravity="center"
                 android:text="@string/wallet_create_btn"
                 android:textColor="@color/wallet_white"
-                android:textSize="20sp"
+                android:textSize="@dimen/font_sp_20"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -116,8 +114,6 @@
     <include
         android:id="@+id/title"
         layout="@layout/wallet_common_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
