--- a/app/src/main/res/layout/wallet_assets_prompt.xml
+++ b/app/src/main/res/layout/wallet_assets_prompt.xml
@@ -11,10 +11,10 @@
 
         <ImageView
             android:id="@+id/identity_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_8"
             android:background="@color/wallet_color_005FC7"
             android:scaleType="center"
             android:src="@mipmap/wallet_identity_icon"
@@ -23,16 +23,16 @@
 
         <TextView
             android:id="@+id/identity_title"
-            android:layout_width="343dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/dp_313"
+            android:layout_height="@dimen/dp_0"
             android:background="@drawable/wallet_identity_prompt_top_bg"
             android:drawableRight="@mipmap/wallet_identity_prompt_detail"
             android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="9dp"
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_9"
             android:text="Digital identity"
             android:textColor="@color/wallet_white"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_sp_18"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/identity_icon"
             app:layout_constraintLeft_toRightOf="@id/identity_icon"
@@ -42,7 +42,7 @@
             android:id="@+id/identity_bottom_bg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="@dimen/dp_2"
             android:scaleType="fitXY"
             android:src="@mipmap/wallet_identity_prompt_bottom_bg"
             app:layout_constraintLeft_toLeftOf="@id/identity_icon"
@@ -53,23 +53,23 @@
             android:id="@+id/identity_content_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:layout_marginTop="@dimen/dp_18"
             android:drawableLeft="@mipmap/wallet_identity_prompt_content_icon"
-            android:drawablePadding="16dp"
+            android:drawablePadding="@dimen/dp_16"
             android:text="Understand the role of digital identity"
             android:textColor="@color/wallet_text_black"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="@dimen/font_sp_12"
+            app:layout_constraintLeft_toLeftOf="@id/identity_bottom_bg"
             app:layout_constraintTop_toBottomOf="@id/identity_icon" />
 
         <TextView
             android:id="@+id/identity_content_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/dp_10"
             android:drawableLeft="@mipmap/wallet_identity_prompt_content_icon"
-            android:drawablePadding="16dp"
+            android:drawablePadding="@dimen/dp_16"
             android:text="Digital identity of the upgrade process"
             android:textColor="@color/wallet_text_black"
             android:textSize="12sp"
@@ -80,12 +80,12 @@
             android:id="@+id/identity_content_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/dp_10"
             android:drawableLeft="@mipmap/wallet_identity_prompt_content_icon"
-            android:drawablePadding="16dp"
+            android:drawablePadding="@dimen/dp_16"
             android:text="Digital identity credential acquisition"
             android:textColor="@color/wallet_text_black"
-            android:textSize="12sp"
+            android:textSize="@dimen/font_sp_12"
             app:layout_constraintLeft_toLeftOf="@id/identity_content_2"
             app:layout_constraintTop_toBottomOf="@id/identity_content_2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -96,10 +96,10 @@
 
         <ImageView
             android:id="@+id/st_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_12"
             android:scaleType="fitXY"
             android:src="@mipmap/wallet_st_prompt_icon"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -107,16 +107,16 @@
 
         <TextView
             android:id="@+id/st_title"
-            android:layout_width="343dp"
+            android:layout_width="@dimen/dp_313"
             android:layout_height="0dp"
             android:background="@drawable/wallet_identity_prompt_top_bg"
             android:drawableRight="@mipmap/wallet_identity_prompt_detail"
             android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="9dp"
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_9"
             android:text="Security Token"
             android:textColor="@color/wallet_white"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_sp_18"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/st_icon"
             app:layout_constraintLeft_toRightOf="@id/st_icon"
@@ -126,7 +126,7 @@
             android:id="@+id/st_bottom_bg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="@dimen/dp_2"
             android:scaleType="fitXY"
             android:src="@mipmap/wallet_st_prompt_bottom_bg"
             app:layout_constraintLeft_toLeftOf="@id/st_icon"
@@ -137,22 +137,22 @@
             android:id="@+id/st_content_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginLeft="@dimen/dp_22"
+            android:layout_marginTop="@dimen/dp_12"
             android:text="Content introduction of token assets"
             android:textColor="@color/wallet_text_black"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="@dimen/font_sp_12"
+            app:layout_constraintLeft_toLeftOf="@id/st_bottom_bg"
             app:layout_constraintTop_toBottomOf="@id/st_icon" />
 
         <TextView
             android:id="@+id/st_content_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/dp_10"
             android:text="Add token assets"
             android:textColor="@color/wallet_text_black"
-            android:textSize="12sp"
+            android:textSize="@dimen/font_sp_12"
             app:layout_constraintLeft_toLeftOf="@id/st_content_1"
             app:layout_constraintTop_toBottomOf="@id/st_content_1" />
 
