--- a/app/src/main/res/layout/wallet_collection_item_view.xml
+++ b/app/src/main/res/layout/wallet_collection_item_view.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/collection_image"
-        android:layout_width="164dp"
+        android:layout_width="@dimen/dp_164"
         android:layout_height="wrap_content"
         android:src="@mipmap/ceshi"
         android:scaleType="centerCrop"
@@ -20,12 +20,12 @@
         android:id="@+id/collection_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_10"
         android:textColor="@color/wallet_text_black"
-        android:textSize="14sp"
+        android:textSize="@dimen/font_sp_14"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/dp_10"
         app:layout_constraintTop_toBottomOf="@id/collection_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
