--- a/app/src/main/res/layout/wallet_main_top_title_view.xml
+++ b/app/src/main/res/layout/wallet_main_top_title_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_top_title_bg"
-    android:layout_height="64dp"
+    android:layout_height="@dimen/dp_64"
     android:background="@mipmap/wallet_main_top_title_bg"
     android:orientation="vertical">
 
@@ -11,7 +11,9 @@
         android:id="@+id/main_left_menu"
         android:src="@mipmap/wallet_main_menu"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="@dimen/dp_16"
+      android:layout_marginBottom="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_height="wrap_content" />
 
@@ -19,17 +21,21 @@
         android:id="@+id/title"
         android:text="DEX"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
+        android:textSize="@dimen/font_sp_17"
         android:textColor="@color/wallet_white"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/main_scan"
+        android:layout_marginRight="@dimen/dp_16"
         android:src="@mipmap/wallet_main_scan_icon"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/dp_10"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content" />
 </com.idhub.wallet.main.MainTopTitleView>
