--- a/app/src/main/res/layout/wallet_mnemonic_item.xml
+++ b/app/src/main/res/layout/wallet_mnemonic_item.xml
@@ -4,13 +4,14 @@
     android:id="@+id/mnemonic_preview_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
+    android:layout_marginLeft="@dimen/dp_10"
     android:gravity="center"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="@dimen/dp_10"
     android:background="@drawable/memonic_selected"
-    android:paddingBottom="5dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
+    android:paddingBottom="@dimen/dp_7"
+    android:paddingLeft="@dimen/dp_15"
+    android:paddingRight="@dimen/dp_15"
+    android:textSize="@dimen/font_sp_15"
+    android:paddingTop="@dimen/dp_7"
     android:textColor="@color/wallet_text_black"
     tools:text="@string/wallet_designated_amount" />
